@@ -7872,7 +7872,7 @@
       <accuracy>4</accuracy>
       <reach>0</reach>
       <damage>({STR}+1)P</damage>
-      <ap>-4</ap>
+      <ap>-2</ap>
       <mode>0</mode>
       <rc>0</rc>
       <ammo>0</ammo>
@@ -7914,7 +7914,7 @@
       <type>Melee</type>
       <conceal>0</conceal>
       <accuracy>Physical</accuracy>
-      <reach>1</reach>
+      <reach>0</reach>
       <damage>({STR}+2)P</damage>
       <ap>-2</ap>
       <mode>0</mode>
